# pySendCast

./: README.md  pyproject.toml  recv.py  send.py  setup.py
pySendBcast/: send.py
pySendCast/: __init__.py  __main__.py  bcast.py  recv.py  send.py
src/: __init__.py  bcast.py  recv.py  send.py
